--- a/client/components/add/add.html
+++ b/client/components/add/add.html
@@ -1,4 +1,4 @@
-<div ng-controller="AddController as add">
+<div>
 
     <div layout-margin layout="row" layout-align="center center">
         <div flex-gt-sm="50" class="md-whiteframe-18dp" layout="column" layout-margin>
@@ -38,5 +38,6 @@
 
 
     </div>
+
 </div>
 
